--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/alexwileyy/hackpass#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "mongoose": "^4.6.3"
+    "mongoose": "^4.6.3",
+    "path": "^0.12.7"
   }
 }
