--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "http": "0.0.0",
     "mongoose": "^4.6.3",
     "path": "^0.12.7",
     "request": "^2.75.0"
