--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "http": "0.0.0",
     "mongoose": "^4.6.3",
     "path": "^0.12.7",
-    "request": "^2.75.0"
+    "prompt": "^1.0.0",
+    "request": "^2.75.0",
+    "twilio": "^2.11.0"
   }
 }
