--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "path": "^0.12.7",
     "prompt": "^1.0.0",
     "request": "^2.75.0",
-    "twilio": "^2.11.0"
+    "twilio": "^2.11.0",
+    "url": "^0.11.0"
   }
 }
